[project]
name = "streamlit-viz"
version = "0.1.0"
description = "Interactive visualization of Power Quality Disturbances using Streamlit and Plotly"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PQD Visualization Team"}
]
dependencies = [
    "streamlit>=1.32.2",
    "plotly>=5.18.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.12.0",
    "pywavelets>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "pqd_models.py"]
